--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,29 @@
   margin: 0;
   box-sizing: border-box;
 }
+html,
+body,
+#root {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: white;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+#root {
+  background: #f0f0f0;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
 
 body {
   background-color: white;
@@ -96,4 +119,9 @@ p {
 }
 .no-line-break {
   display: inline-flex;
+}
+
+.script-box {
+  will-change: width, height, left, top;
+  position: relative;
 }
