--- a/src/styles.css
+++ b/src/styles.css
@@ -29,7 +29,7 @@ body {
   position: absolute;
   will-change: transform;
   border-radius: 50%;
-  background: lightcoral;
+  background: lightblue;
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   opacity: 0.6;
 }
