--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Raleway&display=swap');
 * {
   padding: 0;
   margin: 0;
@@ -32,7 +31,7 @@ body,
 body {
   background-color: white;
   color: black;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Lato', sans-serif;
   display: flex;
   /* align-items: center; */
   justify-content: center;
@@ -43,25 +42,23 @@ body {
 
 h1 {
   padding-top: 2rem;
+  font-family: 'Lato', sans-serif;
   text-align: center;
 }
-
-.info-wrapper {
-  display: flex;
-  justify-content: space-between;
+ 
+img{
+  padding-top: 10px;
 }
 
 h3 {
   padding: 1rem;
+  font-family: 'Lato', sans-serif;
   font-weight: normal;
 }
 h5 {
   padding: 1rem;
 }
 
-li {
-  list-style: none;
-}
 
 .round-img{
   border-radius: 50%;
@@ -73,17 +70,10 @@ p {
   display: flex;
   max-width: 800px;
   padding-bottom: 5px;
+  font-family: 'Raleway', sans-serif;
+
 }
 
-.info-wrapper button {
-  background: #272727;
-  color: white;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  padding: 0.5rem;
-  margin: 0.5rem 1rem;
-}
 
 .space-after{
   padding-bottom: 30px;
