--- a/src/styles.css
+++ b/src/styles.css
@@ -29,9 +29,9 @@ body {
   position: absolute;
   will-change: transform;
   border-radius: 50%;
-  background: lightskyblue;
+  background: rgba(135, 206, 250,1);
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-  opacity: 0.6;
+  opacity: 0.3;
 }
 
 .hooks-main > div:nth-child(1) {
@@ -40,8 +40,8 @@ body {
 }
 
 .hooks-main > div:nth-child(2) {
-  width: 250px;
-  height: 250px;
+  width: 200px;
+  height: 200px;
 }
 
 .hooks-main > div:nth-child(3) {
@@ -77,7 +77,7 @@ body {
 .hooks-main {
   position: absolute;
   width: 100%;
-  height: 100%;
+  height: 60%;
   filter: url('#goo');
   overflow: hidden;
 }
