--- a/src/index.css
+++ b/src/index.css
@@ -5,17 +5,26 @@
   box-sizing: border-box;
 }
 
-
 body {
   color: black;
   font-family: 'Lato', sans-serif;
   display: flex;
   /* align-items: center; */
-  justify-content: center;
   text-align: center;
   min-height: 100vh;
   padding: 2rem;
+  margin: 0;
+  padding: 0;
 }
+
+#root {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: whitesmoke;
+}
+
 
 h1 {
   padding-top: 2rem;
@@ -39,6 +48,7 @@ h5 {
 
 .round-img{
   border-radius: 50%;
+  border: 5px solid white;
 }
 
 p {
@@ -86,4 +96,22 @@ p {
 }
 .no-line-break {
   display: inline-flex;
+}
+.animation_background {
+  background-color: whitesmoke;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 0; 
+}
+#particles-js {
+  background-color: whitesmoke;
+  position: absolute;
+  z-index: 50;
+  width: 100%;
+  height: 100%;
+  top: 0;
 }
