--- a/src/styles.css
+++ b/src/styles.css
@@ -21,7 +21,7 @@ body {
   position: absolute;
   will-change: transform;
   border-radius: 50%;
-  background: rgba(135, 206, 250,1);
+  background:#868686;
   box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
   opacity: 0.3;
 }
