--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Raleway&display=swap');
-* {
-  margin: 0;
-}
+
 
 body {
   color: black;
@@ -12,7 +10,6 @@ body {
   padding: 2rem;
   margin: 0;
   padding: 0;
-  
 }
 
 
@@ -21,6 +18,8 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  background-image: linear-gradient(to top, rgba(255,0,0,0), rgb(110, 196, 240));
+
 }
 
 
@@ -40,9 +39,6 @@ h1 {
   text-align: center;
 }
  
-img{
-  padding-top: 0px;
-}
 
 h3 {
   padding: 1rem;
@@ -59,7 +55,10 @@ h5 {
   border-radius: 50%;
   border: 5px solid whitesmoke;
   z-index: 1;
+  margin-top: 5px;
+
 }
+
 
 p {
   margin-left: auto;
