--- a/src/index.css
+++ b/src/index.css
@@ -59,8 +59,10 @@ h5 {
 
 
 p {
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
   display: flex;
   max-width: 800px;
   padding-bottom: 5px;
