--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,8 @@ h5 {
 p {
   margin-left: auto;
   margin-right: auto;
+  padding-left: 10px;
+  padding-right: 10px;
   display: flex;
   max-width: 800px;
   padding-bottom: 5px;
